--- a/practica1/programa/set_cover.ipynb
+++ b/practica1/programa/set_cover.ipynb
@@ -5,11 +5,23 @@
    "id": "cc10e21b-6e85-4a74-9d0f-db2f57d6afbd",
    "metadata": {},
    "source": [
-    "# practica 1\n",
+    "# Practica 1\n",
     "Acosta Arzate Ruben \n",
     "\n",
     "Lopez Miranda Angel Mauricio\n",
+    "\n",
+    "ESQUEMAS DE CODIFICACION \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34f823dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fileref = open()"
    ]
   }
  ],
